# OpenWhisper

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  NOTICE  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: branch-discipline.sh
.claude/skills/openwhisper-animation-philosophy/: SKILL.md
.claude/skills/openwhisper-branch-discipline/: SKILL.md
.claude/skills/openwhisper-dev-workflow/: SKILL.md
.claude/skills/openwhisper-devtools-sheet/: SKILL.md
.claude/skills/openwhisper-headless-first/: SKILL.md
.claude/skills/openwhisper-iteration-budget/: SKILL.md
.claude/skills/openwhisper-orchestration-in-rust/: SKILL.md
.claude/skills/openwhisper-parakeet-quirks/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
apps/macos/: project.yml
apps/tauri/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
apps/tauri/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/tauri/src-tauri/capabilities/: default.json  windows.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: behavior.rs  focus.rs  lib.rs  main.rs
apps/tauri/src-tauri/src/crashes/: mod.rs
apps/tauri/src-tauri/src/fullscreen/: mac.rs  mod.rs  windows.rs
apps/tauri/src-tauri/src/hotkey/: mac.rs  mod.rs  windows.rs
apps/tauri/src-tauri/src/injection/: mac.rs  mod.rs  windows.rs
apps/tauri/src-tauri/src/media_control/: mac.rs  mod.rs  windows.rs
apps/tauri/src-tauri/src/permissions/: mac.rs  mod.rs  version_reset.rs
apps/tauri/src-tauri/src/settings/: mod.rs
apps/tauri/src-tauri/src/tray/: mod.rs
apps/tauri/src-tauri/tests/: emitter_cadence.rs
backlog/: config.yml
backlog/decisions/: decision-1 - Recognizer bench thresholds.md  decision-2 - Recognizer CUDA EP defer.md  decision-3 - Recognizer engine swap to ort.md  recognizer-bench-thresholds-2026-04-26.md
backlog/docs/: doc-34 - Handy-comparison-—-feature-by-feature-audit.md  doc-35 - OpenWhispr-comparison-—-feature-by-feature-audit.md  doc-36 - Three-way-audit-synthesis-—-Handy-OpenWhispr-OpenWhisper-value-ranked.md  v1-oss-readiness-research.md
backlog/milestones/: m-1 - v1.0-public-release-readiness.md
backlog/tasks/: task-1 - Scaffold-macOS-SwiftUI-app-shell.md  task-10 - Custom-vocabulary-biasing.md  task-11 - Settings-window.md  task-12 - Sign-notarize-DMG-release-pipeline.md  task-13 - License-attribution-bundle.md  task-14 - Voice-activity-detection-in-Rust-core.md  task-15 - Swap-Parakeet-v2-→-v3-multilingual-model.md  task-16 - Multilingual-filler-register-lang-aware-stripping.md  task-17 - Optional-LLM-cleanup-pass-for-transcript-repair.md  task-18 - Caveman-lite-rule-based-compression-filter.md  task-19 - Local-LLM-transformation-pass-caveman-full-ultra-retskrivning.md  task-2 - Rust-core-crate-scaffold.md  task-20 - Menu-bar-agent-mode-status-bar-app-LSUIElement.md  task-21 - Windows-port-spike-sherpa-onnx-Parakeet-ONNX-on-Win11-VM.md  task-22 - SpeechRecognizer-trait-Rust-native-STT-path-for-Windows.md  task-23 - Shared-visual-identity-tokens.md  task-24 - Windows-floating-pill-overlay.md  task-25 - Windows-tray-icon-with-phase-state.md  task-26 - Windows-tray-only-accessory-mode.md  task-27 - Windows-tap-not-hold-hotkey-via-low-level-hook.md  task-28 - Windows-Escape-to-cancel-recording.md  task-29 - Windows-first-run-health-banner.md  task-3 - Integrate-FluidAudio-Parakeet-CoreML-artifact.md  task-3 - Parakeet-CoreML-conversion-pipeline.md  task-30 - Windows-tray-menu-with-phase-aware-labels.md  task-31 - Tauri-Phase-0-—-Scaffold-app-wire-Rust-core.md  task-32 - Tauri-Phase-1-—-Pill-HUD-spike.md  task-33 - Tauri-Phase-2-—-Recognizer-spike-sherpa-rs-CoreML-EP.md  task-34 - Tauri-Phase-3-—-Main-window-parity-with-Mac-ContentView.md  task-35 - Tauri-Phase-4-—-Tray-global-hotkey-Escape-hook.md  task-36 - Tauri-Phase-5-—-Dictation-flow-text-injection.md  task-37 - Tauri-Phase-6-—-Close-to-tray-single-instance-health-banner-auto-update.md  task-38 - Tauri-Phase-7-—-Polish-pass-archive-WinUI-3-retire-apps-macos.md  task-39 - Recognizer-perf-bench-on-real-GPU-hardware-RTX-3070.md  task-4 - Audio-capture-VAD-in-Rust-core.md  task-4 - Microphone-capture-in-Rust-core.md  task-40 - Recognizer-engine-swap-to-ort-runtime-EP-probe-DirectML-bench.md  task-41 - Tauri-Mac-parity-audit-apps-macos-retirement.md  task-42 - Pill-HUD-rework-—-particle-morph-sphere-transitions.md  task-43 - Tauri-wire-transcript-filter-into-dictation-pipeline.md  (+187 more)
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/src/commands/: crash_dump.rs  enumerate_devices.rs  memory.rs  mod.rs  recognizer_info.rs  settings.rs  transcribe.rs
cli/tests/: smoke.rs
core/: Cargo.toml  build.rs
core/examples/: recognizer_smoke.rs
core/src/: audio.rs  dictation.rs  ffi_c.rs  lib.rs  media_gate.rs  prelude.rs  transcript.rs  verbose.rs
core/src/crashes/: event_buffer.rs  mod.rs
core/src/diagnostics/: mod.rs
core/src/model_lifecycle/: mod.rs
core/src/recognizer/: download.rs  ep_probe.rs  fluidaudio.rs  mel.rs  mod.rs  ort_lib.rs  ort_parakeet.rs  sherpa.rs
core/src/settings/: mod.rs
core/src/stats/: mod.rs
core/src/store/: migrations.rs  mod.rs
core/src/telemetry/: memory.rs  mod.rs
core/swift/FluidAudioBridge/: Package.swift
core/swift/FluidAudioBridge/Sources/FluidAudioBridge/: Bridge.swift
core/tests/: panic_hook.rs
docs/: claude-windows-handoff.md  release-0.3.0-handover.md  release-0.4.0-handover.md  release-0.5.0-handover.md  release-0.5.0-notes.md  release-0.6.0-handover.md  release-0.6.0-notes.md  tauri-phase-6-handover.md  tauri-port-handover.md
docs/design/: identity-tokens.md
docs/spikes/: task-3-parakeet-on-apple-silicon.md
models/: README.md
scripts/: bootstrap.sh  build-core.sh  dev-run.sh  package-release.sh  reset-tcc.sh
scripts/bench/: bench-eps.ps1  smoke-with-powermetrics.sh  smoke-with-wpr.ps1
scripts/bench/bench-sherpa/: Cargo.toml
scripts/bench/bench-sherpa/src/: main.rs
(+204 files in other folders)
