[package]
name = "openwhisper-cli"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Jimmi Joensson"]
description = "Headless CLI for OpenWhisper. Same engine as the desktop app — record, transcribe, enumerate devices, inspect recognizer state, surface crash dumps."
publish = false

[[bin]]
name = "openwhisper"
path = "src/main.rs"

[dependencies]
# Same library the Tauri shell consumes. `recognizer` enables the
# in-core ASR path (FluidAudio on Mac via the Swift bridge,
# ort + Parakeet ONNX on Win/Linux).
openwhisper-core = { path = "../core", default-features = false, features = ["recognizer"] }
# clap derive keeps the parser definition close to the subcommand
# handlers and gives us --help + shell completion for free.
clap = { version = "4", features = ["derive"] }
# Rich error context across the I/O + recognizer call chain. Each
# subcommand handler returns `anyhow::Result<()>` so any error from
# core surfaces with a stack of `.context(...)` annotations.
anyhow = "1"
# JSON output for `--json` mode on every subcommand.
serde_json = "1"
# Sample WAV reader for `cli transcribe`. Cross-platform and pure
# Rust — same dep core/ uses for its recognizer smoke example.
hound = "3.5"
# Resolves the OS-specific config dir so `cli settings` reads/writes
# the same settings.json the Tauri shell consumes
# (~/Library/Application Support/com.openwhisper.app/settings.json on
# Mac; %APPDATA%\com.openwhisper.app\settings.json on Windows).
dirs = "5"

[dev-dependencies]
# JSON parsing for the smoke test that asserts on `cli --json
# transcribe ...` output. Already a runtime dep; pulled in here
# explicitly so the test target sees it without lighting up the
# default-features path.
serde_json = "1"
