[package]
name = "openwhisper-core"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Jimmi Joensson"]
repository = "https://github.com/jimmi-joensson/OpenWhisper"
homepage = "https://github.com/jimmi-joensson/OpenWhisper"
publish = false
description = "Shared core logic for OpenWhisper: audio capture, VAD, config, providers, post-processing. Exposed to native UI shells via swift-bridge (macOS) and P/Invoke (Windows)."

[lib]
name = "openwhisper_core"
# staticlib: swift-bridge links this into the macOS app (.a).
# rlib:      for cargo internal consumers (tests, Tauri shell).
# cdylib:    .dll for Windows P/Invoke from the C# shell.
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["macos-shell"]
# swift-bridge FFI for the shipped macOS SwiftUI app. Off when a pure-Rust
# consumer (Tauri) links core as a path dep.
macos-shell = ["dep:swift-bridge", "dep:swift-bridge-build"]
# Tauri shell flavor — pulls in `recognizer` so STT lives in core for the
# pure-Rust consumer. Shipped Mac SwiftUI keeps using FluidAudio and never
# compiles sherpa-onnx.
tauri = ["recognizer"]
# In-core ASR. On macOS the shipped SwiftUI app uses FluidAudio via the
# Swift bridge — this feature is for the cross-platform Tauri shell and
# bench harness on Windows/Linux, where we drive Parakeet-TDT-v3 ONNX
# directly through `ort` (pykeio). EP selection (CPU/DirectML/CUDA/TRT)
# happens at runtime via the EP probe — not a Cargo feature flag.
# `directml` and `cuda` are off by default; Phase 1 ships CPU-only.
# Extending features = ["recognizer-directml"] etc. lights up the
# corresponding ort EP at build time.
recognizer = [
    "dep:ort",
    "dep:rustfft",
    "dep:ndarray",
    "dep:ureq",
    "dep:tar",
    "dep:bzip2",
    "dep:dirs",
    "dep:num_cpus",
]
recognizer-directml = ["recognizer", "ort?/directml"]
recognizer-cuda = ["recognizer", "ort?/cuda"]
recognizer-tensorrt = ["recognizer", "ort?/tensorrt"]

[dependencies]
swift-bridge = { version = "0.1.59", optional = true }
cpal = "0.17"
rubato = "0.16"
regex = "1.11"
# pykeio/ort 2.x — the de-facto Rust binding to ONNXRuntime, with first-
# class DirectML / CUDA / TensorRT EP support behind feature flags. We
# replaced sherpa-onnx with ort in TASK-40 because sherpa wraps DML behind
# a per-vendor source build, and we want one Windows binary that auto-
# selects the best EP at runtime.
#
# `load-dynamic` (instead of `download-binaries`): ort-sys's prebuilt
# bundle skips x86_64-pc-windows-gnu (the no-admin Win dev box's
# toolchain), so download-binaries panics during build there.
# load-dynamic defers ORT linking to runtime via libloading —
# `ort::init_from(path)` at startup tells ORT where to find
# onnxruntime.{dll|dylib|so}. Same crate compiles on every (toolchain,
# OS) combination; the lib is deployment metadata, not a Cargo concern.
# Provisioned per-host via `apps/tauri/scripts/fetch-ort.cjs` into
# ~/.cache/openwhisper/onnxruntime/ (matches ONNXRuntime version pinned
# by ort-sys = 1.22.0).
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["load-dynamic", "ndarray", "std"] }
# Pure-Rust FFT for the librosa-style mel spectrogram preprocessor —
# Parakeet-TDT-v3 expects 128-bin slaney mel features at 16 kHz/hop=160,
# matching NeMo's AudioToMelSpectrogramPreprocessor. Pure Rust avoids
# pulling kaldi-native-fbank's C++ closure into the build.
rustfft = { version = "6.2", optional = true }
# ndarray powers the f32 tensor shapes ort consumes/produces. Same major
# version that ort 2.0.0-rc.10 re-exports; pin to keep the type bridge
# stable.
ndarray = { version = "0.16", optional = true }
# Parakeet v3 model archive download + extract (same .tar.bz2 the Windows
# shell consumes from k2-fsa/sherpa-onnx releases).
ureq = { version = "2.12", default-features = false, features = ["tls"], optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }
dirs = { version = "5", optional = true }
# Physical core count (not logical) for the recognizer's intra-op default.
# Sweeps on 4c4t Xeon and 6c12t Ryzen showed performance cratered when
# num_threads >= num_logical_cpus (SMT oversubscription). Physical-core
# count is the safer ceiling — see TASK-39 bench notes.
num_cpus = { version = "1.16", optional = true }

# Persistence layer — single SQLite file at <app_data_dir>/openwhisper.db,
# owned by core/ so the state machine (TASK-87/88) writes from the same
# place every shell reads. `bundled` links a copy of SQLite into the
# binary (~1 MB) — removes platform variance (Windows ships no system
# SQLite, older Linux SQLites lack JSON1/FTS5). MIT-licensed.
rusqlite = { version = "0.39", features = ["bundled"] }
# Ordered, idempotent schema migrations driven by SQLite's
# user_version pragma. Apache-2.0 — MIT-compatible.
rusqlite_migration = "2.5"

# Mac-only — used to query CoreAudio kAudioDevicePropertyTransportType so we
# can drop virtual mics (Microsoft Teams Audio, Zoom virtual device, Krisp,
# BlackHole, etc.) from the picker. cpal classifies aggregate devices on
# macOS but not virtual ones, so cpal's DeviceDescription alone isn't
# enough. coreaudio-rs is already a transitive dep via cpal — promoting it
# to a direct dep on Mac doesn't grow the lockfile.
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.14", default-features = false, features = ["core_audio"] }

[dev-dependencies]
# Portable WAV reader for the recognizer smoke example (cross-platform —
# avoids dragging sherpa-onnx into the Mac smoke path just for I/O).
hound = "3.5"
# Sandboxed temp dirs for store::tests that exercise open-or-init against
# a throwaway path.
tempfile = "3"

[build-dependencies]
swift-bridge-build = { version = "0.1.59", optional = true }
