[package]
name = "openwhisper-tauri"
version = "0.1.0"
description = "OpenWhisper cross-platform dictation shell (Tauri)"
authors = ["Jimmi Joensson"]
edition = "2021"
publish = false

[lib]
# `_lib` suffix avoids a Windows cargo quirk where the bin and lib names
# collide: https://github.com/rust-lang/cargo/issues/8519
name = "openwhisper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openwhisper-core = { path = "../../../core", default-features = false, features = ["tauri"] }
# Cross-platform clipboard for the paste flow. Text-only save/restore
# (non-text formats lossy across both OSes — same as the WinUI 3 shell
# shipped behavior).
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-global-shortcut = "2"
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
