[package]
name = "openwhisper-tauri"
version = "0.3.0"
description = "OpenWhisper cross-platform dictation shell (Tauri)"
authors = ["Jimmi Joensson"]
license = "MIT"
repository = "https://github.com/jimmi-joensson/OpenWhisper"
homepage = "https://github.com/jimmi-joensson/OpenWhisper"
edition = "2021"
publish = false

[lib]
# `_lib` suffix avoids a Windows cargo quirk where the bin and lib names
# collide: https://github.com/rust-lang/cargo/issues/8519
name = "openwhisper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openwhisper-core = { path = "../../../core", default-features = false, features = ["tauri"] }
# Cross-platform clipboard for the paste flow. Text-only save/restore
# (non-text formats lossy across both OSes — same as the WinUI 3 shell
# shipped behavior).
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
# AVCaptureDevice authorization probe + prompt — matches the Swift
# PermissionsCoordinator at boot. Raw obj-c via objc2; block2 for the
# completion handler.
objc2 = "0.6"
block2 = "0.6"
# Convert the pill webview window to a real NSPanel via objc class
# swizzle so it can render over other apps' fullscreen Spaces. Plain
# NSWindow + collection-behavior is unreliable cross-app on Sonoma+
# (Apple Developer Forums #26677); tauri-nspanel is the canonical fix
# used by Cap, Screenpipe, Hyprnote, Wispr Flow. v2.1 branch tracks
# Tauri 2.10+.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
