[package]
name = "openwhisper-tauri"
version = "0.6.0"
description = "OpenWhisper cross-platform dictation shell (Tauri)"
authors = ["Jimmi Joensson"]
license = "MIT"
repository = "https://github.com/jimmi-joensson/OpenWhisper"
homepage = "https://github.com/jimmi-joensson/OpenWhisper"
edition = "2021"
publish = false

[lib]
# `_lib` suffix avoids a Windows cargo quirk where the bin and lib names
# collide: https://github.com/rust-lang/cargo/issues/8519
name = "openwhisper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Force-enable the debug-only `crashes_debug_trigger_panic` command in
# release builds. Useful for ad-hoc release-build crash repro; default
# off so user-visible release builds expose no panic-trigger surface.
dev-panic = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Sandboxed temp dirs for crashes::tests that exercise state.json IO.
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
# Cross-platform launch-at-login. Windows: HKCU\Software\Microsoft\Windows\
# CurrentVersion\Run; macOS: ~/Library/LaunchAgents/<productName>.plist via
# the auto-launch crate's LaunchAgent path (NOT the Service Management
# framework's SMAppService — LSUIElement / menu-bar apps need a plain
# LaunchAgent, see lib.rs registration site for the full rationale).
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openwhisper-core = { path = "../../../core", default-features = false, features = ["tauri"] }
# Cross-platform clipboard for the paste flow. Text-only save/restore
# (non-text formats lossy across both OSes — same as the WinUI 3 shell
# shipped behavior).
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
# AVCaptureDevice authorization probe + prompt — matches the Swift
# PermissionsCoordinator at boot. Raw obj-c via objc2; block2 for the
# completion handler.
objc2 = "0.6"
block2 = "0.6"
# NSScreen.visibleFrame for Dock-aware pill placement. Already in the
# tree transitively via tauri-nspanel; promoted to a direct dep so we
# can `use objc2_app_kit::NSScreen` without a re-export.
objc2-app-kit = "0.3"
# Convert the pill webview window to a real NSPanel via objc class
# swizzle so it can render over other apps' fullscreen Spaces. Plain
# NSWindow + collection-behavior is unreliable cross-app on Sonoma+
# (Apple Developer Forums #26677); tauri-nspanel is the canonical fix
# used by Cap, Screenpipe, Hyprnote, Wispr Flow. v2.1 branch tracks
# Tauri 2.10+.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Foundation",
    # SMTC media-session pause/play + BT endpoint detection
    # (TASK-61.4 audio ducking). CoInitializeEx + STGM_READ are in
    # Win32_System_Com; SMTC types are in Media_Control; the
    # IVectorView returned from manager.GetSessions() needs
    # Foundation_Collections; IMMDeviceEnumerator (default render
    # endpoint lookup) is in Win32_Media_Audio. The "is the default
    # render endpoint a Bluetooth device?" check goes through
    # IPropertyStore + PKEY_Device_EnumeratorName (returns "BTHENUM" /
    # "BTHLEDEVICE" for BT, "USB"/"HDAUDIO" for wired) which lives in
    # Win32_UI_Shell_PropertiesSystem + Win32_Devices_FunctionDiscovery.
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
] }
