[package]
name = "bench-sherpa"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench-sherpa"
path = "src/main.rs"

[dependencies]
openwhisper-core = { path = "../../../core", default-features = false, features = ["recognizer"] }
# Pure-Rust WAV reader. Avoids sherpa-onnx's `Wave::read`, whose C++ side
# opens files via the ANSI Win32 API and fails on non-ASCII paths
# (see `feedback_ansi_path_marshaling.md`).
hound = "3.5"
